Lavet så man kan finde mulige træk for alle kort eller for et enkelt kort og ændret fra linked list til normal list